--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Oswald', sans-serif;
+    font-family: Arial, Helvetica, sans-serif, sans-serif; 
   }
   body {
     background-color: #d1eccd;
