--- a/style.css
+++ b/style.css
@@ -1,150 +1,247 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "JetBrains Mono", monospace;
-  }
-
-  
-  body {
-    background-color: #d1eccd;
-    background-image: url("data:image/svg+xml,%3Csvg width='120' height='120' viewBox='0 0 120 120' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9 0h2v20H9V0zm25.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm-20 20l1.732 1-10 17.32-1.732-1 10-17.32zM58.16 4.134l1 1.732-17.32 10-1-1.732 17.32-10zm-40 40l1 1.732-17.32 10-1-1.732 17.32-10zM80 9v2H60V9h20zM20 69v2H0v-2h20zm79.32-55l-1 1.732-17.32-10L82 4l17.32 10zm-80 80l-1 1.732-17.32-10L2 84l17.32 10zm96.546-75.84l-1.732 1-10-17.32 1.732-1 10 17.32zm-100 100l-1.732 1-10-17.32 1.732-1 10 17.32zM38.16 24.134l1 1.732-17.32 10-1-1.732 17.32-10zM60 29v2H40v-2h20zm19.32 5l-1 1.732-17.32-10L62 24l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM111 40h-2V20h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zM40 49v2H20v-2h20zm19.32 5l-1 1.732-17.32-10L42 44l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM91 60h-2V40h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM39.32 74l-1 1.732-17.32-10L22 64l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM71 80h-2V60h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM120 89v2h-20v-2h20zm-84.134 9.16l-1.732 1-10-17.32 1.732-1 10 17.32zM51 100h-2V80h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM100 109v2H80v-2h20zm19.32 5l-1 1.732-17.32-10 1-1.732 17.32 10zM31 120h-2v-20h2v20z' fill='%23ffffff' fill-opacity='0.32' fill-rule='evenodd'/%3E%3C/svg%3E");
-  }
-
-  img{
-    width: 90%;
-  }
-
-  .tablero {
-    box-sizing: content-box;
-    width: 29.5em;
-    padding: 0.65em 2em;
-    background-color: #F4ECE8;
-    color: #100B32;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    left: 50%;
-    top: 50%;
-    border-radius: 0.6em;
-    box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2);
-    border: 7px solid #585EFF;
-  }
-
-  .contenedor {
-    position: relative;
-    width: 103%;
-    height: auto;
-    display: grid;
-    gap: 0.6em;
-  }
-  
-
-  .instrucciones {
-    height: auto;
-    text-align: left;
-    max-width: 310px;
-    margin-bottom: -60px;
-    font-size: 13px;
-    font-weight: bold;
-  }
- 
-  .estadisticas {
-    text-align: right;
-    margin-bottom: 1.6em;
-  }
-  .estadisticas span {
-    font-weight: 600;
-  }
-  .contenedor-tarjetas {
-    position: relative;
-    width: 6.25em;
-    height: 6.25em;
-    cursor: pointer;
-  }
-  .novisible,
-  .visible {
-    position: absolute;
-    border-radius: 5px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 4px solid #123D1B;
-    transition: transform 0.7s ease-out;
-    backface-visibility: hidden;
-  }
-  .novisible {
-    background-color: #F2D805;
-    font-size: 2.8em;
-    font-weight: 600;
-  }
-  .visible {
-    background-color: #3BCF5B;
-    transform: rotateY(180deg);
-  }
-  .contenedor-tarjetas.flipped .novisible {
-    transform: rotateY(180deg);
-  }
-  .contenedor-tarjetas.flipped .visible {
-    transform: rotateY(0deg);
-  }
-  .controles {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    width: 100%;
-    height: 100%;
-    background-color: #d1eccd;
-    top: 0;
-    background-image: url("data:image/svg+xml,%3Csvg width='120' height='120' viewBox='0 0 120 120' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9 0h2v20H9V0zm25.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm-20 20l1.732 1-10 17.32-1.732-1 10-17.32zM58.16 4.134l1 1.732-17.32 10-1-1.732 17.32-10zm-40 40l1 1.732-17.32 10-1-1.732 17.32-10zM80 9v2H60V9h20zM20 69v2H0v-2h20zm79.32-55l-1 1.732-17.32-10L82 4l17.32 10zm-80 80l-1 1.732-17.32-10L2 84l17.32 10zm96.546-75.84l-1.732 1-10-17.32 1.732-1 10 17.32zm-100 100l-1.732 1-10-17.32 1.732-1 10 17.32zM38.16 24.134l1 1.732-17.32 10-1-1.732 17.32-10zM60 29v2H40v-2h20zm19.32 5l-1 1.732-17.32-10L62 24l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM111 40h-2V20h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zM40 49v2H20v-2h20zm19.32 5l-1 1.732-17.32-10L42 44l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM91 60h-2V40h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM39.32 74l-1 1.732-17.32-10L22 64l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM71 80h-2V60h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM120 89v2h-20v-2h20zm-84.134 9.16l-1.732 1-10-17.32 1.732-1 10 17.32zM51 100h-2V80h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM100 109v2H80v-2h20zm19.32 5l-1 1.732-17.32-10 1-1.732 17.32 10zM31 120h-2v-20h2v20z' fill='%23ffffff' fill-opacity='0.32' fill-rule='evenodd'/%3E%3C/svg%3E");
-  }
-
-  .controles button {
-    margin: 1em;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "JetBrains Mono", monospace;
 }
 
-  button {
-    border: none;
-    border-radius: 0.3em;
-    padding: 0.8em 1.5em;
-    cursor: pointer;
-    font-weight: bold;
-    background-color: #e99445;
-    color: #811D0C;
-    border: 4px solid #0C4093;
-  }
+body{
+  min-height: 100vh;
+  background-color: #d1eccd;
+  background-image: url("data:image/svg+xml,%3Csvg width='120' height='120' viewBox='0 0 120 120' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9 0h2v20H9V0zm25.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm-20 20l1.732 1-10 17.32-1.732-1 10-17.32zM58.16 4.134l1 1.732-17.32 10-1-1.732 17.32-10zm-40 40l1 1.732-17.32 10-1-1.732 17.32-10zM80 9v2H60V9h20zM20 69v2H0v-2h20zm79.32-55l-1 1.732-17.32-10L82 4l17.32 10zm-80 80l-1 1.732-17.32-10L2 84l17.32 10zm96.546-75.84l-1.732 1-10-17.32 1.732-1 10 17.32zm-100 100l-1.732 1-10-17.32 1.732-1 10 17.32zM38.16 24.134l1 1.732-17.32 10-1-1.732 17.32-10zM60 29v2H40v-2h20zm19.32 5l-1 1.732-17.32-10L62 24l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM111 40h-2V20h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zM40 49v2H20v-2h20zm19.32 5l-1 1.732-17.32-10L42 44l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM91 60h-2V40h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM39.32 74l-1 1.732-17.32-10L22 64l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM71 80h-2V60h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM120 89v2h-20v-2h20zm-84.134 9.16l-1.732 1-10-17.32 1.732-1 10 17.32zM51 100h-2V80h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM100 109v2H80v-2h20zm19.32 5l-1 1.732-17.32-10 1-1.732 17.32 10zM31 120h-2v-20h2v20z' fill='%23ffffff' fill-opacity='0.32' fill-rule='evenodd'/%3E%3C/svg%3E");
+}
 
-  button:hover{
-    opacity: .8;
-    }
-    
-  #stop {
-    font-size: 1em;
-    display: block;
-    margin: 1em auto 0 auto;
-  }
+/*Imagen de las tarjetas respectivas*/
+img{
+  width: 90%;
+}
 
-  .controles button {
-    font-size: 1.3em;
-    box-shadow: 0 0.6em 2em rgba(86, 66, 0, 0.2);
-  }
+.tablero{
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
-  .hide {
-    display: none;
-  }
-  
-  #resultado {
-    text-align: center;
-  }
+.info-box{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-  #resultado h2 {
-    font-size: 2em;
-  }
-  
-  #resultado h4 {
-    font-size: 1.2em;
-    margin: 0.5em 0 1em 0;
-  }
+/*-------------MODAL---------------*/
+
+.controles{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  padding: 0 15px; /*Para el responsive*/
+  pointer-events: none;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(218, 56, 66, 0.6);
+  transition: opacity 0.4s ease;
+}
+
+.controles.show{
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.controles .content{
+  background: #FFF;
+  max-width: 415px;
+  width: 100%;
+  text-align: center;
+  border-radius: 10px;
+  padding: 30px;
+}
+
+.controles img{
+  max-width: 200px;
+
+}
+
+.controles h4{
+  font-size: 30px;
+}
+
+.controles p{
+  font-size: 16px;
+  margin: 15px 0 20px;
+}
+
+.controles p strong{
+  color: green;
+  font-weight: bold;
+}
+
+.controles button{
+  font-size: 11.5px;
+  border: none;
+  border-radius: 0.3em;
+  padding: 0.8em 1em;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: bold;
+  background-color: #e99445;
+  color: #811D0C;
+  border: 3px solid #0C4093;
+}
+
+/*Estilos del tablero principal*/
+
+.tablero {
+  box-sizing: content-box;
+  width: 29.5em;
+  padding: 0.65em 2em;
+  background-color: #F4ECE8;
+  color: #100B32;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
+  border-radius: 0.6em;
+  box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2);
+  border: 7px solid #585EFF;
+}
+
+.contenedor {
+  position: relative;
+  width: 103%;
+  height: auto;
+  display: grid;
+  gap: 0.6em;
+}
+
+.estadisticas {
+  text-align: right;
+  margin-bottom: 1.6em;
+}
+.estadisticas span {
+  font-weight: 600;
+}
+.contenedor-tarjetas {
+  position: relative;
+  width: 6.25em;
+  height: 6.25em;
+  cursor: pointer;
+}
+.novisible,
+.visible {
+  position: absolute;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 4px solid #123D1B;
+  transition: transform 0.7s ease-out;
+  backface-visibility: hidden;
+}
+.novisible {
+  background-color: #F2D805;
+  font-size: 2.8em;
+  font-weight: 600;
+}
+.visible {
+  background-color: #3BCF5B;
+  transform: rotateY(180deg);
+}
+.contenedor-tarjetas.flipped .novisible {
+  transform: rotateY(180deg);
+}
+.contenedor-tarjetas.flipped .visible {
+  transform: rotateY(0deg);
+}
+
+
+/*Configuracion JAVA*/
+
+#stop {
+  font-size: 1em;
+  display: block;
+  margin: 1em auto 0 auto;
+}
+
+.hide {
+  display: none;
+}
+
+#resultado {
+  text-align: center;
+}
+
+#resultado h2 {
+  font-size: 2em;
+}
+
+#resultado h4 {
+  font-size: 1.2em;
+  margin: 0.5em 0 1em 0;
+}
+
+/*Estilos tablero de intrucciones inicio*/
+button{
+  font-size: 11.5px;
+  border: none;
+  border-radius: 0.3em;
+  padding: 0.8em 1em;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: bold;
+  background-color: #e99445;
+  color: #811D0C;
+  border: 3px solid #0C4093;
+}
+
+button:hover{
+  opacity: .8;
+}
+
+.info-box{
+  width: 600px;
+  background: #FFF;
+  border-radius: 10px;
+}
+
+.info-box .info-title{
+  font-size: 20px;
+  height: 60px;
+  width: 100%;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  background: greenyellow;
+  border-radius: 10px 10px 0 0;
+  border-bottom: 2px solid rebeccapurple;
+  text-transform: uppercase;
+}
+
+.info-box .info-list{
+  padding: 10px 40px;
+  font-size: 15px;
+}
+
+.info-box .info-list .info{
+  margin: 10px 0;
+}
+
+.info-box .controlesejemplo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  gap: 15px;
+}
+
+span{
+  font-weight: bold;
+}
